# create-cillers-system

./: .gitignore  README.md  polytope.edn  polytope.yml  secrets.example
cillers/manager/: .pylintrc  pyproject.toml
cillers/manager/.devcontainer/: devcontainer.json
cillers/manager/app/: config_cillers.py  filepaths.py  main.py
cillers/manager/app/base/: environment.py  standards.py  yaml_parser.py
cillers/manager/app/config/: config.py  shared_types.py  standards.py  yaml_parser.py
cillers/manager/app/config/config_validators/: config_validator_couchbase.py  config_validator_datastores.py  config_validator_helpers.py
cillers/manager/app/config/datastores/couchbase/: cluster.py  cluster_capella.py  cluster_server_single_node.py  cluster_shared.py  connection.py  credentials.py  main.py  shared.py  standards.yml
cillers/manager/app/config/datastores/redpanda/: standards.yml
cillers/manager/app/datastores/: __init__.py
cillers/manager/app/datastores/couchbase/: config_couchbase.py  controller.py
cillers/manager/app/datastores/couchbase/base/: connection.py  keyspace.py
cillers/manager/app/datastores/couchbase/config/: config_cloud_capella.py  config_cluster_capella.py  config_clusters.py  config_metadata.py  standards.yml  (+1 more)
cillers/manager/app/datastores/redpanda/: cluster_config.py  config_redpanda.py
cillers/manager/app/services/: __init__.py
cillers/manager/app/services/couchbase/: config_couchbase.py  controller.py  filepaths.py
cillers/manager/app/services/redpanda/: cluster_config.py  config_redpanda.py  controller.py  filepaths.py
cillers/manager/app/x_config/: config_parser.py
cillers/manager/app/x_config/config_validators/: config_validator_clients.py  config_validator_redpanda.py
code/change-maker/: pyproject.toml
code/change-maker/app/: change_maker_config.py  clients_config.py  config.py  config_file.py  config_parser.py  config_validator.py  config_validator_clients.py  config_validator_consistency.py  config_validator_couchbase.py  config_validator_data_stores.py  config_validator_helpers.py  config_validator_redpanda.py  couchbase.py  data_stores_config.py  env.py  main.py  standards_clients.yml  standards_data_stores.yml
migrations/: .gitignore  pyproject.toml
migrations/.ipython/profile_default/startup/: startup.py
migrations/cillers_cli/: __init__.py  couchbase.py  create_resource.py  env.py  fs.py  kafka_connect.py  log.py  types.py
services/input/: app.py  pyproject.toml  requirements.txt
services/input/input/: auth.py  env.py  routes.py
(+418 files in other folders)
