[tool.poetry]
name = "cillers-cli"
version = "0.1.0"
description = ""
authors = ["Apparently Required <not-a-real-name@localhost>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
PyYAML = "^6.0.1"
couchbase = "^4.1.8"
confluent-kafka = "^2.2.0"
pydantic = "^2.4.2"
rich = "^13.6.0"
httpie = "^3.2.2"
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.277"
pytest = "^7.4.0"
ipdb = "^0.13.13"
ipython = "^8.15.0"

[tool.poetry.scripts]
cillers-cli = 'main:main'
