[tool.poetry]
name = "app"
version = "0.0.1"
description = ""
authors = ["Peder Linder <peder@cillers.com>"]

[tool.poetry.dependencies]
python = "^3.10"
couchbase = "^4.1.12"
kafka-python = "^2.0.2"
pyyaml = "^6.0.1"
rich = "^13.7.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.277"
pytest = "^7.4.0"
ipdb = "^0.13.13"
ipython = "^8.15.0"
pylint = "^3.2.6"

[tool.poetry.scripts]
change = 'app.main:change'
validate_conf = 'app.main:validate_config'

[build-system]
requires = ["poetry-core"]
